Fix FFZ settings not showing up in chat settings menu. Fix overlay extensions not hiding properly. Fix #384. Update subscriber notifications.

--- a/src/sites/twitch-twilight/modules/css_tweaks/styles/player-ext-mouse.scss
+++ b/src/sites/twitch-twilight/modules/css_tweaks/styles/player-ext-mouse.scss
@@ -1,3 +1,3 @@
-.player .extension-overlay__iframe {
+.player .extension-overlay {
 	pointer-events: none !important;
 }
